  encoding.

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Bug #1713: posixpath.ismount() claims symlink to a mountpoint is a mountpoint.

- Issue #1700: Regular expression inline flags incorrectly handle certain
  unicode characters.

- Change ctypes version number to 1.0.3 (when Python 2.5.2 is released,
  ctypes 1.0.3 will be also be released).

- Issue #1695: Fixed typo in the docstrings for time.localtime() and gmtime().

- Issue #1642: Fix segfault in ctypes when trying to delete attributes.

- os.access now returns True on Windows for any existing directory.

- Issue #1531: tarfile.py: Read fileobj from the current offset, do not
  seek to the start.

- Issue 1429818: patch for trace and doctest modules so they play nicely
  together.

- doctest mis-used __loader__.get_data(), assuming universal newlines was used.

- Issue #1705170: contextlib.contextmanager was still swallowing
  StopIteration in some cases. This should no longer happen.

- Bug #1307: Fix smtpd so it doesn't raise an exception when there is no arg.

- ctypes will now work correctly on 32-bit systems when Python is
  configured with --with-system-ffi.

- Bug #1777530: ctypes.util.find_library uses dump(1) instead of
  objdump(1) on Solaris.

- Bug #1153: repr.repr() now doesn't require set and dictionary items
  to be orderable to properly represent them.

- Bug #1709599: Run test_1565150 only if the file system is NTFS.

- When encountering a password-protected robots.txt file the RobotFileParser
  no longer prompts interactively for a username and password (bug 813986).

- TarFile.__init__() no longer fails if no name argument is passed and